[package]
name = "rust-imagelib"
version = "0.1.0"
edition = "2021"
authors = ["Navaneethan"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
conv = "*"
imageproc = "0.23.0"
rusttype = "0.9.2"
textwrap = "0.15.0"

[dependencies.image]
version = "0.24.2"
default-features = false
features = ["gif", "jpeg", "png", "jpeg_rayon"]

[dependencies.serde]
version = "1.0.138"
features = ["derive"]
optional = true
